<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.pcdd</groupId>
    <artifactId>spring-boot-learning</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>${project.artifactId}</name>
    <description>Spring Boot 3 Learning</description>

    <modules>
        <module>spring-data-jpa</module>
        <module>mybatis</module>
        <module>mybatis-plus</module>
        <module>spring-data-redis</module>
        <module>spring-data-elasticsearch</module>
        <module>rabbitmq</module>
        <module>hibernate-validator</module>
        <module>spring-mvc</module>
        <module>standard-json</module>
        <module>websocket</module>
        <module>spring-native</module>
        <module>async</module>
        <module>spring-security</module>
        <module>aop</module>
        <module>jsp</module>
        <module>custom-starter</module>
        <module>resilience4j</module>
        <module>server-sent-events</module>
        <module>spring-ai</module>
        <module>redisson</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <host>192.168.200.88</host>
    </properties>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.3</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <!-- 以下依赖所有的模块都会引入 -->
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
            <version>5.8.23</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
        <!-- 配置 Maven Resources 插件 -->
        <resources>
            <!-- 让 application.yml 中的 @xxx@ 被识别 -->
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

</project>
